pacman mu notes + gwinett brawl post

--- a/tournament-notes.org
+++ b/tournament-notes.org
@@ -241,3 +241,65 @@ these stupid fat punishes. I got a sick kill off the top with bike into
 up-b. Also got a sweet zero to death.
 ** 1-2 vs DarkForce
 Holy fuck, I hate playing against Villager. 
+* 12/22/2019 @ GB
+I played friendlies with Omega. He was very good at a couple of things:
+1) Denying my combo starters. I barely got a single nair starter
+2) Getting 30+ off of random hits. Seriously, a stray nair or bair and I was
+   guaranteed taking 30. He knew what he could throw out in neutral that would
+   lead to conversions, and he knew how to convert. 
+3) Playing at the very edge of my range and capitalizing off of my whiffs. All
+   of my drifting nonsense basically did nothing. I would drift in and land with
+   fair, and he would do a quick dash out, dash in, and then combo me for 30+. 
+
+Also, Joker has a nair ledge trap. I need to figure out what that covers, and if
+other Joker players use it. 
+
+How do I get out of Joker combo strings? Mostly uair strings. When I am out, how
+can I land so that he doesn't grab me or side-b me?
+
+Mantra: Patient advantage, patient disadvantage. Convert.
+
+DQ round 1. Lost round 2 winners to a solid Wolf who beat Spike in round 1. It
+was a very close set. I lost the set because I got impatient when I had a lead
+in game three. Twice, at least, in the set, I became really impatient in
+disadvantage and got 70+ or a stock taken. I also became impatient in how I
+approached, which let him get easy hits. I am gaining a sense for when someone
+else wants to be impatient, and I know how to punish that. 
+
+I won a couple easy loser's sets. Then, I played Tyson's Peach. It went quite
+well. I lost 2-0, but both games were last hit. I dropped a 3-1 lead game 2. The
+reason I lost both games was because of two things:
+1) Not respecting Peach bair/side-b, especially at the ledge. It comes out way
+   quicker than you expect, and it has a ton of knockback
+2) Impatient disadvantage, especially at the ledge. 
+
+There was also a lack of knowledge about how Peach ledge traps, which didn't
+help. I got a lot of fair from ledge. But mostly, I was being very impatient and
+trying to aerial OOS against a character that is very safe on shield and eats up
+OOS. 
+
+When you run up shield a lot, or pick shield as your first defensive option out
+of a landing aerial, ledge get up, whatever, people are going to grab you. 
+
+I played a lot with Newk, but only a few Wario dittos. I asked him what he does
+against projectile characters. I got this:
+---
+Slowly take space and force them into the corner, and then bait them out of
+it. They can't play their projectile game when they can't retreat, so they are
+forced to play legitimate neutral with you. Except it's not quite legitimate --
+you have the advantage. At this point, play normal corner pressure. 
+
+If they STILL want to try and camp in the corner, it's because they don't feel
+pressured to leave the corner. You have to pick options that make them feel like
+the corner is an unsafe place. The example he gave me was just running up and
+smacking them. I am sure there are others.  
+---
+
+He also advised not to hold forward in the air. Wario is very stubby, and his
+aerials will only hit if you're already on top of them. 
+
+The last thing he said was to practice my conversions. Convert off of stray
+hits, and make them less stray. Use moves that you know you can convert off of,
+and know how to convert (my words, not his). Definitely figure out every way
+you can possibly combo into Waft, but also figure out how to extend weird nair
+starters and platform combos. 
